--- a/IMapp/templates/home.html
+++ b/IMapp/templates/home.html
@@ -27,10 +27,10 @@
                     <a href="#">Home</a>
                 </li>
                 <li>
-                    <a href="#">Logout</a>
+                    <a href="logout">Logout</a>
                 </li>
-                <li class="active">
-                    Yym
+                <li>
+                    <a href="logout">{{user.username}}</a>
                 </li>
             </ul>
         </div>
@@ -163,30 +163,6 @@
                             </li>
                             <li class="list-group-item">
                                 <div class="col-xs-12 col-sm-3">
-                                    <img src="http://api.randomuser.me/portraits/men/24.jpg" alt="Todd Shelton"
-                                         class="img-responsive img-circle"/>
-                                </div>
-                                <div class="col-xs-12 col-sm-9">
-                                    <span class="name">Todd Shelton</span><br/>
-                                        <span class="glyphicon glyphicon-map-marker text-muted c-info"
-                                              data-toggle="tooltip"
-                                              title="5133 Pecan Acres Ln"></span>
-                                    <span class="visible-xs"> <span
-                                            class="text-muted">5133 Pecan Acres Ln</span><br/></span>
-                                        <span class="glyphicon glyphicon-earphone text-muted c-info"
-                                              data-toggle="tooltip"
-                                              title="(522) 991-3367"></span>
-                                    <span class="visible-xs"> <span class="text-muted">(522) 991-3367</span><br/></span>
-                                        <span class="glyphicon glyphicon-envelope text-muted c-info"
-                                              data-toggle="tooltip"
-                                              title="todd.shelton@example.com"></span>
-                                        <span class="visible-xs"> <span
-                                                class="text-muted">todd.shelton@example.com</span><br/></span>
-                                </div>
-                                <div class="clearfix"></div>
-                            </li>
-                            <li class="list-group-item">
-                                <div class="col-xs-12 col-sm-3">
                                     <img src="http://api.randomuser.me/portraits/women/34.jpg" alt="Rosemary Porter"
                                          class="img-responsive img-circle"/>
                                 </div>
@@ -239,7 +215,7 @@
                                          class="img-responsive img-circle"/>
                                 </div>
                                 <div class="col-xs-12 col-sm-9">
-                                    <span class="name">杨煜溟</span><br/>
+                                    <span class="name">Debbie Schmidt</span><br/>
                                         <span class="glyphicon glyphicon-map-marker text-muted c-info"
                                               data-toggle="tooltip"
                                               title="5020 Poplar Dr"></span>
@@ -356,6 +332,14 @@
 <script src="//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js"></script>
 
 <script src="/static/js/csrf.js"></script>
+
+
+<script type="text/javascript">
+    $(function () {
+
+    });
+
+</script>
 
 <script type="text/javascript">
     $(function () {
