用户之间可以正常发送消息，js 添加的元素无法响应 bootstrap

--- a/IMapp/static/css/contact_list.css
+++ b/IMapp/static/css/contact_list.css
@@ -1,4 +1,4 @@
-@import url(//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css);
+/*@import url(//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css);*/
 
 .panel > .list-group .list-group-item:first-child {
     border-top: 1px solid rgb(204, 204, 204);
