--- a/IMapp/templates/contact_list.html
+++ b/IMapp/templates/contact_list.html
@@ -313,7 +313,7 @@
     </div>
 
     <!-- JavaScrip Search Plugin -->
-    <script src="//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js"></script>
+    <script src="./jquery.searchable-1.0.0.min.js"></script>
 
 </div>
 <script type="text/javascript">
