--- a/IMapp/templates/home.html
+++ b/IMapp/templates/home.html
@@ -13,6 +13,7 @@
 
     <link href="/static/css/contact_list.css" rel="stylesheet">
     <link href="/static/css/chat_box.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/context.standalone.css">
 
 
 </head>
@@ -66,6 +67,32 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="row clearfix">
+                    <div class="col-md-12 column">
+                        <div class="panel-group groups" id="panel-9875">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <a class="panel-title" data-toggle="collapse" href="#panel-element-968396">Group
+                                        2</a>
+                                </div>
+                                <div id="panel-element-968396" class="panel-collapse collapse">
+                                    <ul class="list-group contacts" id="contact-list"></ul>
+                                </div>
+                            </div>
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <a class="panel-title" data-toggle="collapse" href="#panel-element-116491">Group
+                                        1</a>
+                                </div>
+                                <div id="panel-element-116491" class="panel-collapse collapse">
+                                    <ul class="list-group contacts" id="contact-list"></ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
 
                 <ul class="list-group contacts" id="contact-list">
                     {#                    <li class="list-group-item">#}
@@ -230,9 +257,22 @@
                                           data-toggle="tooltip" title="glenda.patterson@example.com"></span>
                                     <span class="visible-xs"> <span
                                             class="text-muted">glenda.patterson@example.com</span><br/></span>
+                        <span class="glyphicon glyphicon-trash text-muted c-info delete" data-toggle="tooltip"></span>
                     </div>
                     <div class="clearfix"></div>
                 </li>
+            </div>
+
+            <div class="group_template">
+                <div class="panel panel-default" name="">
+                    <div class="panel-heading group-heading">
+                        <a class="panel-title group_name" data-toggle="collapse"
+                           href="">Group 2</a>
+                    </div>
+                    <div id="" class="panel-collapse collapse">
+                        <ul class="list-group contacts" id="contact-list"></ul>
+                    </div>
+                </div>
             </div>
 
 
@@ -245,8 +285,18 @@
                             <h4 class="modal-title" id="mySmallModalLabel">Add Contact</h4>
                         </div>
                         <div class="modal-body">
-                            <input id="contact_name"> </input>
-                            <button id="add_contact" type="button" class="btn btn-primary">add</button>
+                            {#                            <input id="contact_name" placeholder="Contact"> </input>#}
+                            {#                            <input id="group" placeholder="Group"> </input>#}
+                            <div class="form-group">
+                                <label for="InputContactUsername">Contact</label>
+                                <input type="username" class="form-control" id="inputContactName"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Group">Group</label>
+                                <input type="group" class="form-control" id="inputContactGroup"/>
+                            </div>
+                            {#                            <button id="add_contact" type="button" class="btn btn-primary">add</button>#}
+                            <button type="submit" class="btn btn-default" id="addContactBtn">Submit</button>
                         </div>
                         <div class="modal-footer">
                             {#                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>#}
@@ -328,14 +378,17 @@
 <!-- 可选: 合并了 Bootstrap JavaScript 插件 -->
 <script src="http://apps.bdimg.com/libs/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
+
 <!-- JavaScrip Search Plugin -->
-<script src="//rawgithub.com/stidges/jquery-searchable/master/dist/jquery.searchable-1.0.0.min.js"></script>
+<script src="/static/js/jquery.searchable-1.0.0.min.js"></script>
+
+<script src="/static/js/jquery.easyui.min.js"></script>
 
 <script src="/static/js/csrf.js"></script>
-
 <script src="/static/js/chat_box.js"></script>
 <script src="/static/js/contact_box.js"></script>
 
+<script src="/static/js/context.js"></script>
 
 </body>
 
