--- a/IMapp/static/css/contact_list.css
+++ b/IMapp/static/css/contact_list.css
@@ -21,14 +21,28 @@ body {
     font-family: "Calibri", "Roboto", sans-serif;
 }
 
+/*.contact-panel {*/
+/*border-radius: 5px;*/
+/*background-color: #fff;*/
+/*left: 50%;*/
+/*top: 50%;*/
+/*box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);*/
+/*overflow: scroll;*/
+/*height: 545px;*/
+/*}*/
+
 .contact-panel {
+    /*max-width: 800px;*/
+    width: 100%;
+    height: 540px;
     border-radius: 5px;
     background-color: #fff;
     left: 50%;
     top: 50%;
+    transform: translateX(0%) translateY(0%);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
-    overflow: scroll;
-    height: 545px;
+    background-color: #f8f8f8;
+    overflow: hidden;
 }
 
 .c-search > .form-control {
@@ -55,9 +69,25 @@ body {
     height: 44px;
 }
 
+/*.c-list {*/
+/*padding: 0px;*/
+/*min-height: 44px;*/
+/*}*/
+
+/*.title {*/
+/*display: inline-block;*/
+/*font-size: 1.7em;*/
+/*font-weight: bold;*/
+/*padding: 5px 15px;*/
+/*margin-top: 2px;*/
+/*color: #2b7e9b;*/
+/*}*/
+
 .c-list {
-    padding: 0px;
-    min-height: 44px;
+    background-color: #fff;
+    width: 100%;
+    padding: 20px 0 15px;
+    box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
 }
 
 .title {
@@ -66,16 +96,31 @@ body {
     font-weight: bold;
     padding: 5px 15px;
     margin-top: 2px;
-    color: #2b7e9b;
+    /*margin-left: 2%;*/
+    color: #bcbdc0;
+    font-size: 20px;
 }
 
-.panel-title {
-    display: inline-block;
-    /*font-size: 1.7em;*/
+.group_name {
+    font-size: 1.2em;
     font-weight: bold;
-    /*padding: 5px 15px;*/
-    /*margin-top: 2px;*/
-    color: #2b7e9b;
+    padding: 5px 15px;
+    margin-top: 2px;
+    color: #5bc0de;
+}
+
+.group-heading {
+    border-radius: 0px;
+    border-width: 0px;
+}
+
+.group-panel {
+    border-radius: 0px;
+    border-width: 0px;
+}
+
+.glyphicon {
+    color-rendering: #fdbf68;
 }
 
 ul.c-controls {
@@ -124,8 +169,6 @@ ul.c-controls li a:hover {
     position: relative;
     max-height: 500px;
     overflow: scroll;
-    border-radius: 5px;
-
 }
 
 .contact_template {
