--- a/IMapp/templates/index.html
+++ b/IMapp/templates/index.html
@@ -67,7 +67,7 @@
 <footer class="footer">
     <div class="container">
         <div class="info">
-            <span><a href="http://helloyym.me">Made by Yym</a></span>
+            <span><a href="http://helloyym.me">Copyright © Yym 2016 </a></span>
         </div>
     </div>
 </footer>
