--- a/IMapp/templates/home.html
+++ b/IMapp/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Bootstrap 实例</title>
+    <title>Whats IM</title>
 
     <!-- Bootstrap CSS -->
     <link href="http://apps.bdimg.com/libs/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
